fixed the weird overlap problem

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5243,6 +5243,9 @@
     text-transform: lowercase !important;
 }
 
+
+
+
 #header nav ul li a[href="#menu"]:before {
 	content: '\f0c9';
     display: block;
@@ -5266,6 +5269,7 @@
 }
 
 
+
 .newinner {
 	right: 35px;
     position: absolute !important;
@@ -5286,6 +5290,7 @@
     box-shadow: none !important;
     border-radius: 30px;
 }
+
 
 .moveleft {
 	margin-right: 130px;
@@ -5347,6 +5352,7 @@
     font-weight: 700;
 }
 
+
 .transform {
     font-size: 90px;
     font-weight: 800;
@@ -5371,6 +5377,8 @@
     margin-left: -150px;
     margin-bottom: -300px !important;
 }
+
+
 
 .personname {
     text-align: right;
@@ -5437,6 +5445,140 @@ ul.icons li .icon:before {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 1438px) {
+	.transform {
+		font-size: 72px;
+		margin-left: -68px;
+		margin-top: -455px;
+		line-height: 72px;
+	}
+
+	.collab {
+		font-size: 88px;
+		margin-right: -60px;
+		margin-top: -345px;
+		line-height: 96px;
+	}
+
+	.ciao {
+		font-size: 88px;
+		line-height: 96px;
+		margin-left: -55px;
+		margin-bottom: -390px !important;
+	}
+
+	.newinner {
+		bottom: 155px;
+	}
+
+}
+
+@media screen and (max-width: 1280px) {
+	.transform {
+		font-size: 56px;
+		text-align: left !important;
+		margin-left: -40px;
+		margin-top: -415px;
+		line-height: 56px;
+	}
+
+	.collab {
+		font-size: 76px;
+		margin-right: -30px;
+		margin-top: -270px;
+		line-height: 88px;
+		text-align: right !important;
+		padding-right: 0;
+	}
+
+	.ciao {
+		font-size: 76px;
+		line-height: 88px;
+		margin-left: -50px;
+		margin-bottom: -325px !important;
+		text-align: left !important;
+	}
+
+	.newinner {
+		bottom: 168px;
+	}
+
+	.contentheaders {
+		font-size: 44px;
+	}
+
+	.smallercontent {
+		font-size: 24px;
+	}
+
+	.rightsreserved {
+		padding-bottom: 10px;
+	}
+
+}
+
+@media screen and (max-width: 980px) {
+
+	.moveleft, .moveright {
+		margin-left: 0;
+		margin-right: 0;
+	}
+
+	.newinner {
+		bottom: 290px;
+	}
+
+}
+
+@media screen and (max-width: 480px) {
+	.shopboy {
+		font-size: 28px !important;
+		margin-left: 10px;
+		margin-top: 0;
+		letter-spacing: 12px !important;
+	}
+
+	#header a {
+		font-size: 2rem;
+	}
+
+	#header nav ul li a[href="#menu"]:before {
+		right: 2rem;
+		top: -27px;
+	}
+
+	.topheader {
+		text-align: center;
+	}
+
+	.newinner {
+		width: 80%;
+	}
+
+	.righty {
+		right: 0;
+	}
+
+	.transform {
+	    font-size: 24px;
+	    text-align: center !important;
+	    margin-left: 0px;
+	    margin-top: 0px;
+	    line-height: 56px;
+	}
+
+}
 
 
 
